# roentgen

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  ah_bootstrap.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: black.yml  codestyle.yml  docs.yml  precommit.yml  python-package.yml  testing.yml
astropy_helpers/astropy_helpers/: version.py
docs/: Makefile  README.rst  api.rst  conf.py  index.rst  license.rst  sources.rst
docs/_static/: switcher.json
docs/dev-guide/: code_standards.rst  dev_env.rst  docs.rst  index.rst  release.rst
docs/examples/: index.rst  tutorial1.rst  tutorial1b.rst  tutorial2.rst  tutorial3.rst  tutorial4.rst  tutorial5.rst  tutorial6.rst  tutorial7.rst  tutorial8.rst  tutorial9.rst  tutorial_10.rst  tutorial_11.rst  tutorial_12.rst
docs/guide/: attenuators.rst  background.rst  cxro_compare.rst  element_list.rst  emission_line_list.rst  gui.rst  index.rst  lines.rst  nuclides.rst  nuclides_list.rst  tour.rst  transmission.rst  transmission_bkg.rst
docs/locale/fr/LC_MESSAGES/: _autosummary.po  api.po  authors.po  changelog.po  contributing.po  dev-guide.po  examples.po  guide.po  index.po  license.po  sources.po
docs/locale/fr/LC_MESSAGES/_autosummary/: roentgen.absorption.material.po  roentgen.absorption.po  roentgen.lines.lines.po  roentgen.lines.po  roentgen.nuclides.nuclides.po  roentgen.nuclides.po  roentgen.po  roentgen.tests.po  roentgen.tests.test_lines.po  roentgen.tests.test_massatten.po  roentgen.tests.test_material.po  roentgen.tests.test_response.po  roentgen.tests.test_stack.po  roentgen.tests.test_util.po  roentgen.util.po  roentgen.util.util.po
docs/locale/fr/LC_MESSAGES/dev-guide/: code_standards.po  dev_env.po  docs.po  index.po  release.po
docs/locale/fr/LC_MESSAGES/examples/: index.po  tutorial1a.po  tutorial1b.po  tutorial2.po  tutorial3.po  tutorial4.po  tutorial5.po  tutorial6.po  tutorial7.po  tutorial8.po  tutorial9.po  tutorial_10.po  tutorial_11.po  tutorial_12.po
docs/locale/fr/LC_MESSAGES/guide/: attenuators.po  cxro_compare.po  element_list.po  emission_line_list.po  gui.po  index.po  lines.po  nuclides.po  nuclides_list.po  transmission.po  transmission_bkg.po
docs/reference/: index.rst  lines.rst  nuclides.rst  roentgen.rst  util.rst
gui/: Procfile  app.py  download.js  main.py  requirements.txt
gui/templates/: index.html  styles.css
licenses/: LICENSE.rst
roentgen/: __init__.py  _astropy_init.py  _version.py  conftest.py  setup_package.py  version.py
roentgen/absorption/: __init__.py  material.py  test.py
roentgen/continuum/: __init__.py  emission.py
roentgen/data/: README.rst  compounds_mixtures.csv  electron_binding_energies.csv  elements.csv  elements_densities.csv  emission_energies.csv  emission_intensities.csv  emission_lines.csv  nuclides_list.csv  physical_properties.csv  siegbahn_to_iupac.csv
roentgen/data/compounds_mixtures/: a150.csv  adipose.csv  air.csv  alanine.csv  b100.csv  bakelite.csv  blood.csv  bone.csv  brain.csv  breast.csv  c552.csv  calcium_fluoride.csv  calcium_sulfate.csv  cdte.csv  ceric.csv  cesium_iodide.csv  concrete.csv  concrete_barite.csv  eye.csv  fricke.csv  gadolinium.csv  gadox.csv  gafchromic.csv  gallium_arsenide.csv  kodak.csv  lead_glass.csv  lithium_fluoride.csv  lithium_tetraborate.csv  lung.csv  magnesium_tetraborate.csv  mercuric_iodide.csv  muscle.csv  mylar.csv  nylonfilm.csv  ovary.csv  photo_emulsion.csv  pmma.csv  polyethylene.csv  polystyrene.csv  pvc.csv  (+9 more)
roentgen/data/elements/: z01.csv  z02.csv  z03.csv  z04.csv  z05.csv  z06.csv  z07.csv  z08.csv  z09.csv  z10.csv  z11.csv  z12.csv  z13.csv  z14.csv  z15.csv  z16.csv  z17.csv  z18.csv  z19.csv  z20.csv  z21.csv  z22.csv  z23.csv  z24.csv  z25.csv  z26.csv  z27.csv  z28.csv  z29.csv  z30.csv  z31.csv  z32.csv  z33.csv  z34.csv  z35.csv  z36.csv  z37.csv  z38.csv  z39.csv  z40.csv  (+52 more)
roentgen/data/lara/: Ac-224_@00.lara.txt  Ac-225.lara.txt  Ac-225_@00.lara.txt  Ac-227.lara.txt  Ac-227_@00.lara.txt  Ac-228.lara.txt  Ac-228_@00.lara.txt  Ag-108.lara.txt  Ag-108_@00.lara.txt  Ag-108m.lara.txt  Ag-110.lara.txt  Ag-110_@00.lara.txt  Ag-110m.lara.txt  Ag-111_@00.lara.txt  Al-26.lara.txt  Al-26_@00.lara.txt  Al-28_@00.lara.txt  Am-241.lara.txt  Am-241_@16.lara.txt  Am-242.lara.txt  Am-242_@00.lara.txt  Am-242m.lara.txt  Am-243.lara.txt  Am-243_@00.lara.txt  Am-244.lara.txt  Am-244_@00.lara.txt  Am-244m.lara.txt  Am-245_@00.lara.txt  Ar-37.lara.txt  Ar-37_@00.lara.txt  Ar-41.lara.txt  Ar-41_@00.lara.txt  As-76_@00.lara.txt  At-211.lara.txt  At-211_@00.lara.txt  At-215.lara.txt  At-217.lara.txt  At-217_@00.lara.txt  At-218.lara.txt  At-218_@00.lara.txt  (+541 more)
roentgen/lines/: __init__.py  lines.py
roentgen/nuclides/: __init__.py  nuclides.py
roentgen/tests/: test_lines.py  test_massatten.py  test_material.py  test_response.py  test_stack.py  test_substance.py  test_util.py
roentgen/util/: __init__.py  util.py
scripts/: download_lara.py  example1.py  example2.py  generate_nuclide_list.py  nuclides_list.csv
