[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "roentgen"
dynamic = ["version"]
description = "A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen."
readme = "README.rst"
license = {file = "licenses/LICENSE.rst"}
authors = [
  {name="Steven Christe", email="steven.d.christe@nasa.gov"},
  {name="Nabil Freij", email="nabobalis@users.noreply.github.com"},
  {name="Shane Maloney", email="samaloney@users.noreply.github.com"},
  {name="Dan Ryan", email="DanRyanIrish@users.noreply.github.com"}
  ]
requires-python = ">=3.10"
keywords = ["python", "x-ray", "roentgen"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]
dependencies = [
  'astropy>=5.1',
  'scipy>=1.9.1',
  'numpy>=1.23.3',
]

[project.optional-dependencies]
dev = [
  'pytest>=7.1.3',
  'pytest-astropy>=0.10.0',
  'isort>=5.10.1',
  'black>=22.10.0',
  'flake8>=5.0.4',
  'coverage>=6.5.0',
  'rstcheck',
  'pre-commit>=3.6.0',
]

tests = [
  'pytest>=7.1.3',
  'pytest-astropy>=0.10.0',
  'coverage>=6.5.0',
  'pytest_doctestplus',
]

style = [
  'isort>=5.10.1',
  'black>=24.2.0',
  'flake8>=5.0.4',
  'coverage>=6.5.0',
  'pre-commit>=3.6.0'
]

docs = [
  'matplotlib>3.6.0',
  'sphinx>=5.2.3',
  'sphinx-automodapi>=0.14.1',
  'graphviz>=0.20.1',
  'rstcheck',
  'pytest_doctestplus'
]

gui = [
  'bokeh>=3',
]

[tool.setuptools.package-data]
"roentgen.data" = ["**"]

[tool.setuptools]
packages = ["roentgen"]

[tool.setuptools_scm]
write_to = "roentgen/_version.py"

[tool.pytest.ini_options]
testpaths = ["padre_meddea/tests", "docs"]
doctest_plus = "enabled"
norecursedirs = ["_build"]
text_file_format = "rst"
addopts = "--doctest-rst --doctest-plus --doctest-report ndiff"

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
  "py:class",
  "py:class",
  "file",
]
ignore_directives = [
    "plot",
    "doctest",
    "automodapi",
    "csv-table",
]
ignore_messages = "not referenced"

[tool.isort]
profile = "black"
src_paths = ["roentgen", "test"]
line_length = 100
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_astropy = "astropy"
known_first_party = "roentgen"
length_sort = false
length_sort_sections="stdlib"
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = ["STDLIB", "THIRDPARTY", "ASTROPY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line_length = 100

[tool.coverage.run]
omit = [
  "roentgen/conftest.py",
  "roentgen/*setup_package*",
  "roentgen/tests/*",
  "roentgen/*/tests/*",
  "roentgen/extern/*",
  "roentgen/version*",
  "*/roentgen/_sunpy_init*",
  "*/roentgen/conftest.py",
  "*/roentgen/*setup_package*",
  "*/roentgen/tests/*",
  "*/roentgen/*/tests/*",
  "*/roentgen/extern/*",
  "*/roentgen/version*"
]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
