[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "roentgen"
dynamic = ["version"]
description = "A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen."
readme = "README.rst"
license = {file = "licenses/LICENSE.rst"}
authors = [
  {name="Steven Christe", email="steven.d.christe@nasa.gov"},
  {name="Nabil Freij", email="nabobalis@users.noreply.github.com"},
  {name="Shane Maloney", email="samaloney@users.noreply.github.com"},
  {name="Dan Ryan", email="DanRyanIrish@users.noreply.github.com"}
  ]
requires-python = ">=3.10"
keywords = ["python", "x-ray", "roentgen"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]
dependencies = [
  'astropy>=5.1',
  'scipy>=1.9.1',
  'numpy>=1.23.3',
]

[project.optional-dependencies]
dev = [
  'ruff',
  'pytest',
  'pytest-cov',
  'pytest-astropy',
  'coverage[toml]',
  'pytest-doctestplus',
  'rstcheck',
  'pre-commit>=3.6.0',
]

test = ['pytest', 'pytest-astropy', 'pytest-cov', 'coverage[toml]', 'pytest_doctestplus']

style = ['ruff']

docs = ['sphinx', 'sphinx-automodapi', 'matplotlib', 'sphinx-copybutton', 'pydata-sphinx-theme', 'graphviz', 'rstcheck']

gui = [
  'bokeh>=3',
]

[tool.setuptools.package-data]
"roentgen.data" = ["**"]

[tool.setuptools]
packages = ["roentgen"]

[tool.setuptools_scm]
write_to = "roentgen/_version.py"

[tool.pytest.ini_options]
testpaths = ["padre_meddea/tests", "docs"]
doctest_plus = "enabled"
norecursedirs = ["_build"]
text_file_format = "rst"
addopts = "--doctest-rst --doctest-plus --doctest-report ndiff"

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
  "py:class",
  "py:class",
  "file",
]
ignore_directives = [
    "plot",
    "doctest",
    "automodapi",
    "csv-table",
]
ignore_messages = "not referenced"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "conftest.py",
  "conf.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.coverage.html]
directory = "coverage"

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
