[project]
name = "roentgen"
dynamic = ["version"]
description = "A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = ["astropy>=7.2.0", "scipy>=1.16.3"]
license = { file = "LICENSE.rst" }
authors = [
    { name = "Steven Christe", email = "steven.d.christe@nasa.gov" },
    { name = "Nabil Freij", email = "nabobalis@users.noreply.github.com" },
    { name = "Shane Maloney", email = "samaloney@users.noreply.github.com" },
    { name = "Dan Ryan", email = "DanRyanIrish@users.noreply.github.com" },
]
keywords = ["python", "x-ray", "roentgen"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"


[project.optional-dependencies]
gui = ["bokeh>=3.8.1"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit>=4.5.1",
]
test = ["coverage>=7.13.0", "pytest>=9.0.2", "pytest-cov>=7.0.0"]
lint = ["ruff>=0.14.10"]
docs = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "pytest-doctestplus>=1.6.0",
    "sphinx>=9.0.4",
]

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "conftest.py",
    "conf.py",
    ".csv",
    "gui"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["roentgen/tests", "docs"]
doctest_plus = "enabled"
norecursedirs = ["_build"]
text_file_format = "rst"
addopts = "--doctest-rst --doctest-plus --doctest-report ndiff --cov=roentgen"


[tool.coverage.run]
omit = [
    'roentgen/__init*',
    'roentgen/conftest.py',
    'roentgen/*setup_package*',
    'roentgen/tests/*',
    'roentgen/*/tests/*',
    'roentgen/extern/*',
    'roentgen/version*',
    'roentgen/docs/_build/*',
    '*/roentgen/__init*',
    '*/roentgen/conftest.py',
    '*/roentgen/*setup_package*',
    '*/roentgen/tests/*',
    '*/roentgen/*/tests/*',
    '*/roentgen/extern/*',
    '*/roentgen/version*',
]
