[metadata]
name = roentgen
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.2.dev
author = Steven D. Christe
author_email = steven.christe@nasa.gov
description = A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen.
long_description = A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen.
license = Apache Software Licence 2.0
url = https://github.com/ehsteve/roentgen/
edit_on_github = True
github_project = ehsteve/roentgen
python_requires = ">=3.6"

[options]
python_requires = >=3.6
setup_requires = setuptools_scm
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    astropy

[options.extras_require]
docs =
    sphinx
    sphinx-astropy

tests =
   pytest-cov
   pytest-astropy

[options.package_data]
* = *.c
roentgen = data/*
roentgen.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
testpaths = "roentgen" "docs/examples" "docs/guide"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
max_line_length = 100
ignore = I100,I101,I102,I103,I104,I201

[pycodestyle]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py
max_line_length = 100


[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
