[metadata]
name = roentgen
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
author = Steven D. Christe
author_email = steven.christe@nasa.gov
description = A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen.
long_description = A Python package for the quantitative analysis of the interaction of energetic x-rays with matter. This package is named after one of the discoverers of X-rays, Wilhelm Rontgen.
license = Apache Software Licence 2.0
license_file = licenses/LICENSE.rst
url = https://github.com/ehsteve/roentgen/
edit_on_github = True
github_project = ehsteve/roentgen
python_requires = ">=3.6"

[options]
python_requires = >=3.6
setup_requires = setuptools_scm
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    astropy

[options.extras_require]
docs =
    sphinx
    sunpy-sphinx-theme
    sphinx-automodapi

tests =
    pytest < 5.4
    pytest-cov
    pytest-astropy

[options.package_data]
* = *.c
roentgen = data/*
roentgen.tests = coveragerc

[tool:pytest]
minversion = 3.0
testpaths = "roentgen" "docs/examples" "docs/guide"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
doctest_plus = enabled
addopts = --doctest-rst -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py,gui/main.py
max-line-length = 110

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
max_line_length = 110
# ignore line length
ignore = E501

[isort]
line_length = 110
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = ndcube
known_third_party = astropy,matplotlib,numpy,pytest,setuptools
multi_line_output = 0
balanced_wrapping = True
include_trailing_comma = False
length_sort = False
length_sort_stdlib = True

[coverage:run]
omit =
  roentgen/conftest.py
  roentgen/*setup_package*
  roentgen/tests/*
  roentgen/*/tests/*
  roentgen/extern/*
  roentgen/version*
  */roentgen/_sunpy_init*
  */roentgen/conftest.py
  */roentgen/*setup_package*
  */roentgen/tests/*
  */roentgen/*/tests/*
  */roentgen/extern/*
  */roentgen/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
